# Study-Cmake

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Demo1/: CMakeCache.txt  Demo  Makefile  README.md
Demo2/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile
Demo3/: CMakeCache.txt  CMakeLists.txt  Makefile
Demo3/math/: CMakeLists.txt  Makefile
